--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -6,13 +6,13 @@
     <!-- <li ng-hide="currentUser" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
     <li ng-hide="currentUser" ng-class="{active: isActive('/signup')}"><a href="/signup">Sign up</a></li>
     <li ng-show="currentUser" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a></li> -->
-    <li><a href="#projects">work</a></li>
-    <li><a href="#about">about me</a></li>
+    <li><a class="pointer" ng-click="scrollToAnchor('work')">work</a></li>
+    <li><a class="pointer"ng-click="scrollToAnchor('about')">about me</a></li>
     <li><a href="http://www.linkedin.com/pub/tara-lerias/22/a8a/51a" target="blank">linkedin</a></li>
     <li><a href="https://github.com/tlerias" target="blank">github</a></li>
     <li><a href="http://hackerisms.com" target="blank">hackerisms</a></li>
     <li><a href="http://rantsandtangents.com" target="blank">rants</a><li>
 
   </ul>
-  <h3 class="text-muted">tara lerias.</h3>
+  <h3 class="text-muted">tara lerias</h3>
 </div>
