--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -62,6 +62,82 @@ body {
     color:$link-color;
 }
 
+.card {
+  margin: 25px 5px 0 5px;
+  padding: 20px;
+  height:auto;
+  width:auto;
+  max-width:300px;
+  box-shadow: 0 2px 2px rgba(0,0,0,.05),0 1px 0 rgba(0,0,0,.05);
+  display: inline-block;
+  z-index: 1;
+  overflow:hidden;
+  text-align: center;
+    &:hover{
+      background-color:#eee;
+    }
+  img{
+      display: block;
+      max-width:250px;
+      max-height:300px;
+      width: auto;
+      height: auto;
+
+  }
+}
+.section-container{
+  height:800px;
+  margin:50px 0;
+  &:nth-child(2){
+  }
+}
+.about {
+  img{
+      display: block;
+      max-width:250px;
+      max-height:300px;
+      width: auto;
+      height: auto;
+      margin: 25px auto;
+  }
+}
+
+.title{
+  color:$link-color;
+}
+
+a.anchor{
+  display: block;
+  position: relative;
+  top: -80px;
+  visibility: hidden;
+}
+a.pointer{
+  cursor:pointer;
+}
+
+/* Deck Grid Styling */
+.deckgrid[deckgrid]::before {
+    /* Specifies that the grid should have a maximum of 4 columns. Each column will have the classes 'column' and 'column-1-4' */
+    content: '4 .column.column-1-4';
+    font-size: 0; /* See https://github.com/akoenig/angular-deckgrid/issues/14#issuecomment-35728861 */
+    visibility: hidden;
+}
+
+.deckgrid .column {
+    float: left;
+}
+
+.deckgrid .column-1-4 {
+    width: 25%;
+}
+
+
+
+
+
+/* ---------------- Yo Angular Classes Below -----------------*/
+
 /* Custom page footer */
 .footer {
     padding-top: 19px;
