--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -218,6 +218,9 @@ a.project{
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px) {
+  .container{
+    margin: 0 auto;
+  }
 
 }
 
