--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,6 +23,7 @@ body {
     padding-top: 20px;
     padding-bottom: 20px;
     margin:60px;
+    background-color:#F2E5F2;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -69,6 +70,7 @@ a.navbar-brand{
 }
 
 .card {
+  background-color:$background-color;
   margin: 25px 5px 0 5px;
   padding: 20px;
   height:300px;
@@ -113,6 +115,7 @@ a.navbar-brand{
   display:block;
   width:100%;
   height:100%;
+  color:$font-color;
 }
 .about {
   img{
