fix media queries

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -110,7 +110,6 @@ a.navbar-brand{
 }
 
 .card-description{
-  //background-color:$off-white;
   margin-top:25px;
   display:block;
   width:100%;
@@ -221,9 +220,10 @@ a.project{
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px) {
-  .container{
-    margin: 0 auto;
+  body{
+    margin: 60px 0;
   }
+
 
 }
 
